test/files/pos/t697.scala
object test {
  val x = 10 == 20 == 30 < 10;
}
