test/files/neg/xmlstart.scala
case object AClass {
    val hello = 3;
    val aTest = 3 <hello ; //XML start!
}
